assets/css/style.css
* {
    box-sizing: border-box;
}

body {
    background: url("../images/random_grey_variations.png");
    font-family: Arial, Helvetica, sans-serif, "Helvetica Neue";
    font-size: 18px;
    line-height: 34px;
    color: #777777;
}

.container {
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
    clear: both;
}

#head {
    position: fixed;
    width: 100%;
    margin: 0;
    color: #ffffff;
    background-color: #ffffff;
    border: #cccccc;
    border-bottom: 2px solid #cccccc;
    z-index: 10;
}

h1,
h2,
h3 {
    font-family: 'Georgia', 'Times New Roman', Times, serif;
    font-weight: bold;
    color: #4aaaa5;
}

h1 {
    font-size: 30px;
    line-height: 50px;
    border-bottom: 3px solid #dddddd;
}

#logo {
    float: left;
    width: 250px;
    height: 90px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 30px;
    font-weight: bold;
    line-height: 90px;
    background-color: #4aaaa5;
    color: #ffffff;
    text-align: center;
    text-decoration: none;
}

nav {
    float: right;
    margin-top: 25px;
}

nav a {
    color: #999999;
    text-decoration: none;
    display: inline-block;
    padding-left: 15px;
    margin-left: 15px;
    line-height: 18px;
}

footer {
    font-size: 12px;
    text-align: center;
    color: #ffffff;
    background-color: #666666;
    border-top: 10px solid #4aaaa5;
    height: 30px;
    padding: 0;
    padding-bottom: 50px;
    margin: 0;
    clear: both;
}

#main-container {
    padding-top: 120px;
    z-index: 1;
}

.main-section {
    background-color: #ffffff;
    border: 2px solid #dddddd;
    float: left;
    width: 100%;
    max-width: 960px;
    padding: 30px;
    margin: 0 0 40px;
    overflow: auto;
}

.photo {
    float: left;
    width: 200px;
    height: auto;
    margin-top: 10px;
    margin-right: 25px;
}

.container p {
    float: left;
    overflow: auto;
}

h3,
h2 {
    padding-bottom: 20px;
    margin-bottom: 15px;
    line-height: 22px;
    border-bottom: 3px solid #111010;
}

.project {
    position: relative;
    float: left;
    width: 34%;
    height: auto;
    margin: 20px 0 20px;
    overflow: auto;
    margin-left: 45px;
}

.project img {
    width: 100%;
    border: 0 none;
    opacity: 0.75;
}

.project h3 {
    color: #ffffff;
    background-color: #4aaaa5;
    position: absolute;
    bottom: 20px;
    width: 100%;
    padding: 20px;
    margin-bottom: 0;
    font-weight: bold;
    line-height: 30px;
    text-align: center;
    border-bottom: 0;
}

#contact ul {
    margin-bottom: 20px;
}

#contact li {
    margin-bottom: 10px;
}

label,
input[type=text],
input[type=email],
textarea {
    display: block;
    width: 100%;
}

input[type=text],
input[type=email],
textarea {
    height: 35px;
    padding: 0 10px;
    font-size: 14px;
    border: 2px solid #dddddd;
}

textarea {
    height: 200px;
}

input[type=submit] {
    padding: 10px 30px;
    font-size: 18px;
    color: #ffffff;
    background-color: #4aaaa5;
    border: 0 none; 
}

